Fix Layout Bug
Fix #2  Fix #3
the layout was debugged and working as expected

--- a/HNFCRM_Chat/Content/HNFStyle.css
+++ b/HNFCRM_Chat/Content/HNFStyle.css
@@ -85,7 +85,6 @@ a:link {
     font-size: 0.7em;
     text-decoration: none;
     align-items: center;
-
 }
 .sidebar-nav li a:hover {
     color: orange;
@@ -94,10 +93,9 @@ a:link {
 .sidebar-nav li.sidebar-active a {
     background-color: #ff922e;
     color: white;
-
 }
 .sidebar-nav ul.navbar-nav li a {
-    color: black;
+    color: white;
 }
 /* Topbar property*/
 .navbar-nav li a{
